--- a/clases/ConceptosBasicos/nbproject/project.properties
+++ b/clases/ConceptosBasicos/nbproject/project.properties
@@ -71,6 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ConceptosBasicos
+main.class=ConceptosBasicos.ConceptosBasic
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
