--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
 /clases/ConceptosBasicos/nbproject/private/
 diagramaBD.img
 
+/clases/Libro/nbproject/private/
+/tareas/Libro1/nbproject/private/
+/tareas/TareaLibro1/nbproject/private/
+/tareas/TareaLibro1/build/
+/clases/ConceptosBasicos/build/
+/clases/ReutilizacionCodigo2209/nbproject/private/
+/clases/ReutilizacionCodigo2209/build/
+/clases/ReutilizacionCodigo2209/dist/
+/clases/JavaApplication9/nbproject/private/
+/clases/Composicion/nbproject/private/
+/clases/JavaApplication10/nbproject/private/
+/tareas/Composicion/nbproject/private/
+/tareas/TareaComposicion/nbproject/private/
+/tareas/TareaPOO2209/nbproject/private/
+/tareas/TareaPOO2209/build/
+/tareas/TareaPOO2209/dist/
+/tareas/Composiciones/nbproject/private/
