se agregan metodos de uso general

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ diagramaBD.img
 /tareas/TareaPOO2209/build/
 /tareas/TareaPOO2209/dist/
 /tareas/Composiciones/nbproject/private/
+/tareas/Composiciones/build/
+/tareas/Composiciones/dist/
