--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@ diagramaBD.img
 /tareas/Composiciones/nbproject/private/
 /tareas/Composiciones/build/
 /tareas/Composiciones/dist/
+/tareas/Calculadora Gauss-Jordan/nbproject/private/
+/tareas/Calculadora Gauss-Jordan/build/
+/tareas/Calculadora Gauss-Jordan/dist/
+/clases/JavaBasico2209/nbproject/private/
