--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ diagramaBD.img
 /tareas/Calculadora Gauss-Jordan/build/
 /tareas/Calculadora Gauss-Jordan/dist/
 /clases/JavaBasico2209/nbproject/private/
+/clases/JavaBasico2209/build/
+/clases/JavaBasico2209/dist/
