--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,7 @@ diagramaBD.img
 /clases/JavaBasico2209/nbproject/private/
 /clases/JavaBasico2209/build/
 /clases/JavaBasico2209/dist/
+/clases/Cuentahabiente/nbproject/private/
+/clases/Cuentahabiente/build/
+/clases/Cuentahabiente/dist/
+/tareas/Cuentahabiente/nbproject/private/
