Tarea de clase en linea

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,6 @@ diagramaBD.img
 /clases/Cuentahabiente/build/
 /clases/Cuentahabiente/dist/
 /tareas/Cuentahabiente/nbproject/private/
+/tareas/Cuentahabiente/build/
+/tareas/Cuentahabiente/dist/
+/clases/JavaBasico2209Parte2/nbproject/private/
