tarea cifrado cesar

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,12 @@ diagramaBD.img
 /tareas/Cuentahabiente/build/
 /tareas/Cuentahabiente/dist/
 /clases/JavaBasico2209Parte2/nbproject/private/
+/clases/JavaBasico2209Parte2/build/
+/clases/JavaBasico2209Parte2/dist/
+/tareas/JavaApplication19/nbproject/private/
+/tareas/JavaApplication19/build/
+/tareas/TareaCifrado/nbproject/private/
+/tareas/TareaCifrado/build/
+/tareas/TareaCcesar/nbproject/private/
+/tareas/TareaEncriptacion/nbproject/private/
+/tareas/TareaEncriptacion/build/
