--- a/tareas/TareaEncriptacion/nbproject/project.properties
+++ b/tareas/TareaEncriptacion/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=TareaEncriptacion
-main.class=tareaencriptacion.TareaEncriptacion
+main.class=tareaencriptacion.GraficoMain
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
