--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ diagramaBD.img
 /tareas/TareaCcesar/nbproject/private/
 /tareas/TareaEncriptacion/nbproject/private/
 /tareas/TareaEncriptacion/build/
+/tareas/TareaEncriptacion/dist/
